Front end 2nd commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,15 @@
 spring.application.name=gr.dit
 
 
-spring.datasource.username=dsuser
-spring.datasource.password=n5O3dIenNDvsAyJvI4GydNjSimchMU0t
-spring.datasource.url=jdbc:postgresql://dpg-ctsleci3esus73drj7f0-a.oregon-postgres.render.com:5432/dsdb2024
+spring.datasource.username=ds_user
+spring.datasource.password=PULIsNjMbKW5HpFE5sFZN0EfICHveVik
+spring.datasource.url=jdbc:postgresql://dpg-cuh4afjtq21c73f733j0-a.frankfurt-postgres.render.com:5432/ds_db_pqvi
+#PGPASSWORD=PULIsNjMbKW5HpFE5sFZN0EfICHveVik psql -h dpg-cuh4afjtq21c73f733j0-a.frankfurt-postgres.render.com -U ds_user ds_db_pqvi
 
-
-#spring.datasource.username=ds_user
-#spring.datasource.password=0zJTZyY2sGF95ykbgJHRAQRQQbc3pFyd
-#spring.datasource.url=jdbc:postgresql://dpg-ctfj9dt2ng1s738kar4g-a.oregon-postgres.render.com:5432/ds_db_m5nk
-#PGPASSWORD=0zJTZyY2sGF95ykbgJHRAQRQQbc3pFyd psql -h dpg-ctfj9dt2ng1s738kar4g-a.oregon-postgres.render.com -U ds_user ds_db_m5nk
 
 
 spring.jpa.generate-ddl=true 
 spring.jpa.hibernate.ddl-auto=update
-
-
 
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
